Altered cell order to allow annotator to quit annotations early

--- a/notebooks/data_processing.ipynb
+++ b/notebooks/data_processing.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,17 +41,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Directories\n",
     "trimmed_video_dir = '../data/videos/trimmed'\n",
@@ -59,19 +51,48 @@
     "processed_video_dir = '../data/videos/processed'\n",
     "\n",
     "frame_dir = '../data/images/frames'\n",
-    "\n",
-    "videos = os.listdir(trimmed_video_dir)\n",
-    "\n",
-    "print(videos)"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20250222_152040M.mp4\n"
+     ]
+    }
+   ],
    "source": [
-    "for video in videos:\n",
+    "videos = os.listdir(trimmed_video_dir)\n",
+    "\n",
+    "num_videos = int(input(f\"Enter the number of videos to convert to frames 0-{len(videos)}\"))\n",
+    "\n",
+    "num_videos = min(num_videos, len(videos))\n",
+    "\n",
+    "print(\"\\n\".join(videos[:num_videos]))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracted 4264 frames at 30.0 FPS.\n"
+     ]
+    }
+   ],
+   "source": [
+    "for video in videos[:num_videos]:\n",
     "    \n",
     "    video_name = os.path.splitext(os.path.basename(video))[0]\n",
     "\n",
@@ -84,17 +105,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Moved 20250222_153041_000039.jpg -> ../data/images/for_augmenting\\20250222_153041_000039.jpg\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Standardized image width/height\n",
     "IMAGE_WIDTH, IMAGE_HEIGHT = 768, 448\n",
@@ -131,7 +144,6 @@
     "\n",
     "# Exit labelling variable\n",
     "exit = False\n",
-    "\n",
     "\n",
     "# Mouse callback function\n",
     "def draw_rectangle_with_drag(event, x, y, flags, param):\n",
@@ -176,7 +188,7 @@
     "        \n",
     "    img_copy = img.copy()  # Update the display copy\n",
     "\n",
-    "# Iterate over each file in the raw data dir\n",
+    "# Iterate over each file in the frame dir\n",
     "for filename in os.listdir(frame_dir):\n",
     "\n",
     "    if exit:\n",
@@ -217,6 +229,7 @@
     "        # Create window and set mouse callback\n",
     "        cv2.namedWindow(f\"Label Data: {filename}\", cv2.WINDOW_NORMAL)  # Allow resizing\n",
     "        cv2.resizeWindow(f\"Label Data: {filename}\", IMAGE_WIDTH, IMAGE_HEIGHT)  # Set initial size\n",
+    "        cv2.setWindowProperty(f\"Label Data: {filename}\", cv2.WND_PROP_FULLSCREEN, cv2.WINDOW_FULLSCREEN)\n",
     "        cv2.setMouseCallback(f\"Label Data: {filename}\", draw_rectangle_with_drag)\n",
     "\n",
     "        # Display loop\n",
@@ -266,6 +279,7 @@
     "                for_augmenting_path = os.path.join(augmenting_dir, os.path.basename(file_path))\n",
     "                shutil.move(file_path, for_augmenting_path)\n",
     "                print(f\"Moved {filename} -> {for_augmenting_path}\")\n",
+    "                \n",
     "            # Change rectangle color based on number key\n",
     "            elif key in color_mapping:  \n",
     "                current_color = color_mapping[key]\n",
