updated to track predictive assistant meta data

--- a/notebooks/enhanced_data_processing.ipynb
+++ b/notebooks/enhanced_data_processing.ipynb
@@ -271,7 +271,9 @@
     "for i in range(0, len(files), 1):\n",
     "    \n",
     "    filename = files[i]\n",
-    "    \n",
+    "\n",
+    "    model_name = curr_model.split('.')[0]\n",
+    "\n",
     "    # List to store dicts of annotations\n",
     "    annotations = []\n",
     "    if exit:\n",
@@ -280,6 +282,19 @@
     "    file_path = os.path.join(frame_dir, filename)\n",
     "\n",
     "    if filename.lower().endswith(('.png', '.jpg', '.jpeg')):\n",
+    "\n",
+    "        # Prepare annotation file\n",
+    "        img_filename = os.path.basename(file_path)\n",
+    "        print(img_filename)\n",
+    "        print(os.path.splitext(img_filename)[0])\n",
+    "        text_filename = os.path.splitext(img_filename)[0] + \".txt\"\n",
+    "\n",
+    "        # Viewing annotation file\n",
+    "        viewing_annotation_path = f\"../data/labels/viewing/viewing_{text_filename}\"\n",
+    "        # Formatted annotation file\n",
+    "        yolo_annotations_path = f'../data/labels/formatted/{text_filename}'\n",
+    "\n",
+    "\n",
     "        # Load image\n",
     "        original_img = cv2.imread(file_path)  # keep original image\n",
     "        if original_img is None:\n",
@@ -292,6 +307,11 @@
     "        img = resized_img.copy()   # Active drawing image\n",
     "        img_copy = img.copy()      # Image copy for real-time updates\n",
     "        result = model(resized_img, verbose=False)[0]\n",
+    "\n",
+    "        # tracking variables\n",
+    "        pred_red = 0\n",
+    "        pred_yellow = 0\n",
+    "        pred_green = 0\n",
     "\n",
     "        # add predictions to annotations\n",
     "        for ann in result.boxes.data.tolist():\n",
@@ -307,24 +327,23 @@
     "                \"thickness\": 1\n",
     "                }  \n",
     "            )\n",
+    "            if result.names[int(class_id)] == 'red_light':\n",
+    "                pred_red += 1\n",
+    "            elif result.names[int(class_id)] == 'yellow_light':\n",
+    "                pred_yellow += 1\n",
+    "            elif result.names[int(class_id)] == 'green_light':\n",
+    "                pred_green += 1\n",
     "            # draw BBox\n",
     "            cv2.rectangle(img_copy, (int(x1), int(y1)), (int(x2), int(y2)), color_mapping[ord(str(int(class_id)))], 1)\n",
     "\n",
+    "        utils.update_annotation_data(model_name, img_filename, 'pred_red_light', pred_red)\n",
+    "        utils.update_annotation_data(model_name, img_filename, 'pred_yellow_light', pred_yellow)\n",
+    "        utils.update_annotation_data(model_name, img_filename, 'pred_green_light', pred_green)\n",
     "        # Anchor variables\n",
     "        ix, iy = -1, -1\n",
     "        drawing = False\n",
     "        current_color = (0, 255, 0)  # Default: Green\n",
     "\n",
-    "        # Prepare annotation file\n",
-    "        img_filename = os.path.basename(file_path)\n",
-    "        print(img_filename)\n",
-    "        print(os.path.splitext(img_filename)[0])\n",
-    "        text_filename = os.path.splitext(img_filename)[0] + \".txt\"\n",
-    "        \n",
-    "        # Viewing annotation file\n",
-    "        viewing_annotation_path = f\"../data/labels/viewing/viewing_{text_filename}\"\n",
-    "        # Formatted annotation file\n",
-    "        yolo_annotations_path = f'../data/labels/formatted/{text_filename}'\n",
     "\n",
     "\n",
     "        # Create window and set mouse callback\n",
@@ -373,6 +392,27 @@
     "                os.makedirs(original_dir, exist_ok=True)\n",
     "                original_path = os.path.join(original_dir, os.path.basename(file_path))\n",
     "                shutil.move(file_path, original_path)\n",
+    "\n",
+    "                utils.update_annotation_data(model_name, img_filename, 'total_annotations', len(annotations))\n",
+    "\n",
+    "                red_count = 0\n",
+    "                yellow_count = 0\n",
+    "                green_count = 0\n",
+    "                \n",
+    "                for ann in annotations:\n",
+    "                    if ann['color'] == 'red_light':\n",
+    "                        red_count += 1\n",
+    "                    elif ann['color'] == 'yellow_light':\n",
+    "                        yellow_count += 1\n",
+    "                    elif ann['color'] == 'green_light':\n",
+    "                        green_count += 1\n",
+    "\n",
+    "                utils.update_annotation_data(model_name, img_filename, 'red_light', red_count)\n",
+    "                utils.update_annotation_data(model_name, img_filename, 'rmv_red_light', 0)\n",
+    "                utils.update_annotation_data(model_name, img_filename, 'yellow_light', yellow_count)\n",
+    "                utils.update_annotation_data(model_name, img_filename, 'rmv_yellow_light', 0)\n",
+    "                utils.update_annotation_data(model_name, img_filename, 'green_light', green_count)\n",
+    "                utils.update_annotation_data(model_name, img_filename, 'rmv_green_light', 0)\n",
     "                break\n",
     "\n",
     "\n",
@@ -390,7 +430,7 @@
     "            \n",
     "            # Press 'r' to remove bbox drawn by model assistant\n",
     "            elif key == ord(\"r\"):\n",
-    "                utils.remove_bbox(annotations)\n",
+    "                utils.remove_bbox(annotations, model_name, img_filename)\n",
     "                redraw_bbox(annotations)\n",
     "                \n",
     "            # Press 'z' to undo last rectangle\n",
@@ -418,15 +458,6 @@
     "cv2.destroyAllWindows()\n",
     "\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "utils.dump_data()"
    ]
   },
   {
